--- a/index.html
+++ b/index.html
@@ -1,30 +1,11 @@
 <!DOCTYPE html>
-
+<html lang="en">
 <head>
-
-    <meta charset="utf-8">
-    <title>Password Manager</title>
-    <link rel="stylesheet" type="text/css" href="style.css">
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Document</title>
 </head>
-
 <body>
-    <header>
-        <h1>Password Manager</h1>
-    </header>
-    <main>
-        <div class="container">
-            <form id="generate-form">
-                <label for="username">Username:</label>
-                <input type="text" id="username" name="username" required>
-                <button type="submit">Generate Password</button>
-            </form>
-            <div id="generated-password"></div>
-        </div>
-    </main>
-    <footer>
-        <p>&copy; 2023 Password Manager</p>
-    </footer>
-    <script src="script.js"></script>
+    
 </body>
-
 </html>
